This is first commit

--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,26755],[],[[4,0,1,0,[],[1,338,17523],[]],[5,0,1,0,[],[0,17863,8890,6],[]]],[],[2,1,2,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,43700],[],[[4,0,1,0,[],[1,366,18522],[]],[5,0,1,0,[],[1,18891,24806],[]]],[],[2,2,2,2]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TEST2","*C:\\Users\\swath\\PycharmProjects\\pythonProject3\\TestCases\\TEST2.robot","*TestCases/TEST2.robot","*LoginTest","*Select Category","*Element with locator 'xpath=//div[@class='E2-pcE _1q8tSL']/div[2]/div/div[1]/div/a[2]' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*TEST2","*C:\\Users\\swath\\PycharmProjects\\pythonProject3\\TestCases\\TEST2.robot","*TestCases/TEST2.robot","*LoginTest","*Select Category"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:26","fail":1,"label":"Critical Tests","pass":1},{"elapsed":"00:00:26","fail":1,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:27","fail":1,"id":"s1","label":"TEST2","name":"TEST2","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:43","fail":0,"label":"Critical Tests","pass":2},{"elapsed":"00:00:43","fail":0,"label":"All Tests","pass":2}],[],[{"elapsed":"00:00:44","fail":0,"id":"s1","label":"TEST2","name":"TEST2","pass":2}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1610810928583;
+window.output["baseMillis"] = 1610819201128;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 26787;
+window.output["generated"] = 43749;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
